Opened 11 years ago
Closed 11 years ago
#10569 closed bug (fixed)
[hrev46885] Error creating window "add partition" in DriveSetup
Reported by: | devport | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Partitioning Systems/Intel | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
After creating the "Intel extended partition" can not create any partition. The window is clean. www.devport.pl/haiku/screenshot1.png www.devport.pl/haiku/screenshot2.png www.devport.pl/haiku/screenshot3.png www.devport.pl/haiku/screenshot4.png www.devport.pl/haiku/screenshot5.png
Attachments (5)
Change History (8)
by , 11 years ago
Attachment: | screenshot1.png added |
---|
by , 11 years ago
Attachment: | screenshot2.png added |
---|
by , 11 years ago
Attachment: | screenshot3.png added |
---|
by , 11 years ago
Attachment: | screenshot4.png added |
---|
by , 11 years ago
Attachment: | screenshot5.png added |
---|
comment:1 by , 11 years ago
Priority: | normal → high |
---|
comment:2 by , 11 years ago
Component: | Applications/DriveSetup → Partitioning Systems/Intel |
---|---|
Owner: | changed from | to
Priority: | high → normal |
comment:3 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev46994.