Fix empty parameter dialog in DriveSetup

* When the add-on provides no parameter editor, still add the set of
  of default controls instead of just bailing out of the Init()
  method.

* Before, DriveSetup never added the default controls in such cases
  and simply showed an empty window. This happened when e.g. trying
  to create a new partition inside an extended partition (because
  ExtendedPartitionAddOn provides no parameter editor).

* Fixes #10569